[gd_scene load_steps=8 format=2]

[ext_resource path="res://escenas/mundo.gd" type="Script" id=1]
[ext_resource path="res://escenas/Parallax_layer.gd" type="Script" id=2]
[ext_resource path="res://assets/fondo.png" type="Texture" id=3]
[ext_resource path="res://escenas/jugador.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenas/Interfaz.tscn" type="PackedScene" id=5]
[ext_resource path="res://Musica/Markalo goes to the disco.ogg" type="AudioStream" id=6]
[ext_resource path="res://escenas/Generador_M.tscn" type="PackedScene" id=7]

[node name="mundo" type="Node"]
script = ExtResource( 1 )

[node name="Paralax_fondo" type="ParallaxBackground" parent="."]

[node name="Parallax_layer" type="ParallaxLayer" parent="Paralax_fondo"]
position = Vector2( 0, -1.948 )
motion_mirroring = Vector2( 2320, 0 )
script = ExtResource( 2 )

[node name="fondo" type="Sprite" parent="Paralax_fondo/Parallax_layer"]
position = Vector2( 1144.16, 366.812 )
scale = Vector2( 1.20882, 1.28452 )
texture = ExtResource( 3 )

[node name="jugador" parent="." instance=ExtResource( 4 )]
position = Vector2( -19.6586, -28.2149 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 112.24, 88.4969 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Interfaz" parent="." instance=ExtResource( 5 )]

[node name="MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
autoplay = true

[node name="Generador_M" parent="." instance=ExtResource( 7 )]
position = Vector2( -155.841, 342.851 )

[node name="Timerspawnmegalodon" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Timerspawnpirana1" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Timerspawnpirana2" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Timerspawntiburon1" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timerspawntiburon2" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="iniciojuego" from="." to="." method="juego_nuevo"]
[connection signal="muerto" from="jugador" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
